; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Virtual.c_NewVirtualHostEx.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Virtual.c_NewVirtualHostEx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i32, i32*, i32, i32, i32 }
%struct.TYPE_9__ = type { i64 }

@IP_PROTO_ICMPV4 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_8__* @NewVirtualHostEx(i32* %0, i32* %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca %struct.TYPE_8__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca %struct.TYPE_8__*, align 8
  %13 = alloca %struct.TYPE_9__*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  %14 = load i32*, i32** %10, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %5
  store %struct.TYPE_8__* null, %struct.TYPE_8__** %6, align 8
  br label %64

17:                                               ; preds = %5
  %18 = call %struct.TYPE_8__* @ZeroMalloc(i32 32)
  store %struct.TYPE_8__* %18, %struct.TYPE_8__** %12, align 8
  %19 = call i32 (...) @NewRef()
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %21 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %20, i32 0, i32 5
  store i32 %19, i32* %21, align 8
  %22 = call i32 (...) @NewLock()
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %24 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %23, i32 0, i32 4
  store i32 %22, i32* %24, align 4
  %25 = call i32 (...) @NewCounter()
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %27 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %26, i32 0, i32 3
  store i32 %25, i32* %27, align 8
  %28 = load i32*, i32** %11, align 8
  %29 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %30 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %29, i32 0, i32 2
  store i32* %28, i32** %30, align 8
  %31 = load i32, i32* @IP_PROTO_ICMPV4, align 4
  %32 = call i32 @MAKE_SPECIAL_PORT(i32 %31)
  %33 = call %struct.TYPE_9__* @NewUDP4(i32 %32, i32* null)
  store %struct.TYPE_9__* %33, %struct.TYPE_9__** %13, align 8
  %34 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %35 = icmp ne %struct.TYPE_9__* %34, null
  br i1 %35, label %36, label %47

36:                                               ; preds = %17
  %37 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %38 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %44

41:                                               ; preds = %36
  %42 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %43 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %42, i32 0, i32 0
  store i32 1, i32* %43, align 8
  br label %44

44:                                               ; preds = %41, %36
  %45 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %46 = call i32 @ReleaseSock(%struct.TYPE_9__* %45)
  br label %47

47:                                               ; preds = %44, %17
  %48 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %49 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 8
  %51 = icmp eq i32 %50, 0
  br i1 %51, label %52, label %59

52:                                               ; preds = %47
  %53 = call i64 (...) @IsIcmpApiSupported()
  %54 = icmp ne i64 %53, 0
  br i1 %54, label %55, label %58

55:                                               ; preds = %52
  %56 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %57 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %56, i32 0, i32 1
  store i32 1, i32* %57, align 4
  br label %58

58:                                               ; preds = %55, %52
  br label %59

59:                                               ; preds = %58, %47
  %60 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %61 = load i32*, i32** %10, align 8
  %62 = call i32 @SetVirtualHostOption(%struct.TYPE_8__* %60, i32* %61)
  %63 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  store %struct.TYPE_8__* %63, %struct.TYPE_8__** %6, align 8
  br label %64

64:                                               ; preds = %59, %16
  %65 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  ret %struct.TYPE_8__* %65
}

declare dso_local %struct.TYPE_8__* @ZeroMalloc(i32) #1

declare dso_local i32 @NewRef(...) #1

declare dso_local i32 @NewLock(...) #1

declare dso_local i32 @NewCounter(...) #1

declare dso_local %struct.TYPE_9__* @NewUDP4(i32, i32*) #1

declare dso_local i32 @MAKE_SPECIAL_PORT(i32) #1

declare dso_local i32 @ReleaseSock(%struct.TYPE_9__*) #1

declare dso_local i64 @IsIcmpApiSupported(...) #1

declare dso_local i32 @SetVirtualHostOption(%struct.TYPE_8__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
